fixes missing border in view timematrix slider

--- a/goobi-viewer-core/WebContent/resources/css/dev/viewer.css
+++ b/goobi-viewer-core/WebContent/resources/css/dev/viewer.css
@@ -6875,7 +6875,7 @@ div[id*="-Modal"] .email-form .form-group {
 }
 #timeMatrix .timematrix-selection #slider-range {
   height: 12px;
-  border-color: #ccc;
+  border: 1px solid #ccc;
 }
 #timeMatrix .timematrix-selection #slider-range .ui-slider-handle {
   display: block;
