--- a/goobi-viewer-core/WebContent/resources/css/less/viewer/views/viewTimematrix.less
+++ b/goobi-viewer-core/WebContent/resources/css/less/viewer/views/viewTimematrix.less
@@ -13,7 +13,7 @@
         margin-bottom: 1.3125rem;
         #slider-range {
         	height: 12px;
-        	border-color: @middlegray;
+        	border: 1px solid @middlegray;
             .ui-slider-range {}
             .ui-slider-handle {
                 display: block;
